...
struct DailyDisciplineWidgetView: View {
    var entry: DisciplineProvider.Entry

    var body: some View {
        VStack(alignment: .leading, spacing: 8) {
            HStack {
                Text("Daily Discipline")
                    .font(.caption2)
                    .fontWeight(.black)
                    .textCase(.uppercase)
                Spacer()
                Text("\(entry.summary.progressPercent)%")
                    .font(.headline)
...
